--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^9.0.2",
-    "express": "^4.17.1",
-    "jsonwebtoken": "^8.5.1"
+    "dotenv": "9.0.2",
+    "express": "4.17.1",
+    "express-myconnection": "1.0.4",
+    "jsonwebtoken": "8.5.1",
+    "mysql": "2.18.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
